# eye-tracking-next

./: CMakeLists.txt  README.md
DataGen/: CMakeLists.txt
DataGen/src/: DataGen.cpp  DataGen.h  Filesystem.h
Main/: CMakeLists.txt
Main/src/: EyeTracker.cpp  EyeTracker.h  FaceTracker.cpp  FaceTracker.h  Main.cpp  Main.h
cmake/: CompileDefinitions.cmake
scripts/: post_build.py
